11 November 2013: Wouter
	- Fix bug#534: IXFR query loop over UDP for zones that are unchanged.

11 November 2013: Matthijs
	- EUI48 and EUI64 is now RFC 7043

14 October 2013: Wouter
	- Fix for zone transfer that has different-cased RRSIG signer names
	  or NSEC next-owner names.

20 August 2013: Matthijs
	- tsig errors on incoming tsig print key name and source IP of query.

20 August 2013: Wouter
	- Fix time at 2038, uint32s changed to time_t, support 64bit time_t.

13 August 2013: Wouter
	- Bugfix#518 Incorrect RRL prefix length option names in nsd.conf
	  man page from Ville Mattila.

6 August 2013: Wouter
	- Removed use of random when arc4random is available.  Thus, random
	  and srandom are then not linked with the executable.

9 July 2013: Matthijs
	- Code review Wouter, Yuri, Willem.

28 June 2013: Matthijs
	- Update tmp serial in xfr checking.
	- Fix warning in labellength 0 code.

27 June 2013: Matthijs
	- Bugfix #357: Parent process waits until children closed down
	  sockets, to prevent nsd failing to bind to sockets when restarting.
	- zonec: Don't crash on domain names with label length 0.

26 June 2013: Matthijs
	- Fix bind8 stats test.
	- Force stats if mode is NSD_STATS. 
	- Better xfr syntax checking in xfrd, fallback to axfr after three
	  bad xfr packets.

25 June 2013: Matthijs
	- Rename --enable-eui-rrtypes to --enable-draft-rrtypes.

25 June 2013: Wouter
	- acx_nlnetlabs.m4 updated, --disable-flto option.

20 June 2013: Matthijs
	- Merge some things from trunk:
	  * NSD does not print statistics to logfile if period is 0.
	  * Bug #491: pick program name (0th argument) as syslog identity.
	  * Add hash to rrl bucket.
	  * Fix segfault if no logfile is used.
	  * Fix memory leak in zone parser for txt record (since the large
	    number of txt subsections fix).

17 June 2013: Matthijs
	- While reading xfr, make sure there are no multiple SOA records.

13 June 2013: Matthijs
	- Use IPV6 minimum MTU settings with TCP to reduce failures that